Fixed a problem were excerpts with their own mark-up would have jerky transitions on expand/collapse with Opera, Safari, and Safari Mobile.

--- a/content/templates/default/style.css
+++ b/content/templates/default/style.css
@@ -137,6 +137,10 @@ a img {
 	font-size: 11px;
 	width: 90%;
 }
+.excerpt > *:first-child { /* Subpixel hinting for smoother transitions  */
+        margin-top:0.5px;
+}
+
 
 /* Sources */
 #sources {
